--- a/playlists.html
+++ b/playlists.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Music - Playlists</title>
+  <title>Muse-ic - Playlists</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
   </header>
   
   <main>
-    <h1>Music - Playlists</h1>
+    <h1>Muse-ic - Playlists</h1>
     <label for="sort">Sort by:</label>
     <select id="sort">
       <option value="artist">Artist</option>
