--- a/playlists.html
+++ b/playlists.html
@@ -8,6 +8,8 @@
 </head>
 <body>
   <header>
+    <!-- TODO: Insert img -->
+    <img src="logo.png" alt="Muse-ic logo">
     <nav>
       <ul>
         <li><a href="index.html">All Songs</a></li>
@@ -18,7 +20,10 @@
   </header>
   
   <main>
-    <h1>Muse-ic - Playlists</h1>
+    <h1>Playlists</h1>
+
+    <!-- Sorting -->
+    <!-- TODO: ADD SORTING FUNCTIONALITY -->
     <label for="sort">Sort by:</label>
     <select id="sort">
       <option value="artist">Artist</option>
@@ -27,10 +32,9 @@
     </select>
     <button onclick="sortItems()">Sort</button>
       
-    <div id="artists-collection" class="grid"></div>
+    <div id="playlists-container" class="cards-container"></div>
   </main>
 
-  <script src="data.js"></script>
-  <script src="script.js"></script>
+  <script type="module" src="playlists.js"></script>
 </body>
 </html>
