--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
   <main id="content">
     <section id="songs">
-      <h1>Muse-ic - All Songs</h1>
+      <h1>All Songs</h1>
 
       <!-- Sorting -->
       <!-- TODO: ADD SORTING FUNCTIONALITY -->
@@ -40,6 +40,7 @@
             <th></th>
             <th>Name</th>
             <th>Artist</th>
+            <th>Other Artist(s)</th>
             <th>Year</th>
             <th>Duration</th>
           </tr>
@@ -47,10 +48,8 @@
         <tbody id="songs-list"></tbody>
       </table>
     </section>
-
   </main>
 
-  <script src="data.js"></script>
   <script type="module" src="script.js"></script>
 </body>
 </html>
