implementation artist image display

--- a/artist-songs.html
+++ b/artist-songs.html
@@ -20,9 +20,8 @@
   
   <main>
     <h1 id="artist-name"></h1>
-    
-    <!-- TODO: INSERT ARTIST IMAGE -->
-    <img id="artist-img" src="" alt="Artist image">
+
+    <img id="artist-img" src="" alt="Artist image" width="240" height="240">
 
     <!-- Sorting -->
     <!-- TODO: ADD SORTING FUNCTIONALITY -->
