--- a/playlists.html
+++ b/playlists.html
@@ -30,6 +30,11 @@
       <option value="year">Year</option>
     </select>
     <button onclick="sortItems()">Sort</button>
+
+    <form id="add-playlist-form">
+      <input type="text" id="playlist-name" placeholder="Playlist Name" required>
+      <button type="submit">Add Playlist</button>
+    </form>
       
     <div id="playlists-container" class="cards-container"></div>
   </main>
