--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <input type="text" id="artist" placeholder="Artist" required>
         <input type="text" id="other-artists" placeholder="Other Artist(s)">
         <input type="number" id="year" placeholder="Year" required>
-        <input type="text" id="duration" placeholder="Duration (m:ss)" required>
+        <input type="number" id="duration-minutes" placeholder="Minutes" required min="0">
+        <input type="number" id="duration-seconds" placeholder="Seconds" required min="0" max="59">
         <button type="submit">Add Song</button>
       </form>
 
@@ -36,12 +37,17 @@
       <input type="text" id="search" placeholder="Search songs...">
 
       <!-- Sorting -->
-      <!-- TODO: ADD SORTING FUNCTIONALITY -->
       <label for="sort">Sort by:</label>
       <select id="sort">
-        <option value="artist">Artist</option>
-        <option value="song">Song</option>
-        <option value="year">Year</option>
+        <option value="last-added">Last added</option>
+        <option value="name-asc">Name A-Z</option>
+        <option value="name-desc">Name Z-A</option>
+        <option value="artist-asc">Artist A-Z</option>
+        <option value="artist-desc">Artist Z-A</option>
+        <option value="year-asc">Year old-new</option>
+        <option value="year-desc">Year new-old</option>
+        <option value="duration-asc">Duration low-high</option>
+        <option value="duration-desc">Duration high-low</option>
       </select>
       <button onclick="sortItems()">Sort</button>
 
