basic pagination all songs + playlist-songs add song

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
         </thead>
         <tbody id="songs-list"></tbody>
       </table>
+
+      <!-- Pagination -->
+      <div id="pagination"></div>
     </section>
   </main>
 
