implementation search artist-songs

--- a/artist-songs.html
+++ b/artist-songs.html
@@ -23,6 +23,9 @@
 
     <img id="artist-img" src="" alt="Artist image" width="240" height="240">
 
+    <!-- Search -->
+    <input type="text" id="search" placeholder="Search songs...">
+
     <!-- Sorting -->
     <!-- TODO: ADD SORTING FUNCTIONALITY -->
     <label for="sort">Sort by:</label>
