--- a/artist-songs.html
+++ b/artist-songs.html
@@ -27,12 +27,17 @@
     <input type="text" id="search" placeholder="Search songs...">
 
     <!-- Sorting -->
-    <!-- TODO: ADD SORTING FUNCTIONALITY -->
     <label for="sort">Sort by:</label>
     <select id="sort">
-      <option value="artist">Artist</option>
-      <option value="song">Song</option>
-      <option value="year">Year</option>
+      <option value="last-added">Last added</option>
+      <option value="name-asc">Name A-Z</option>
+      <option value="name-desc">Name Z-A</option>
+      <option value="artist-asc">Artist A-Z</option>
+      <option value="artist-desc">Artist Z-A</option>
+      <option value="year-asc">Year old-new</option>
+      <option value="year-desc">Year new-old</option>
+      <option value="duration-asc">Duration low-high</option>
+      <option value="duration-desc">Duration high-low</option>
     </select>
     <button onclick="sortItems()">Sort</button>
 
