bugfix all songs other artist search

--- a/artist-songs.html
+++ b/artist-songs.html
@@ -32,8 +32,8 @@
       <option value="last-added">Last added</option>
       <option value="name-asc">Name A-Z</option>
       <option value="name-desc">Name Z-A</option>
-      <option value="artist-asc">Other artist(s) A-Z</option>
-      <option value="artist-desc">Other artist(s) Z-A</option>
+      <option value="other-artist-asc">Other artist(s) A-Z</option>
+      <option value="other-artist-desc">Other artist(s) Z-A</option>
       <option value="year-asc">Year old-new</option>
       <option value="year-desc">Year new-old</option>
       <option value="duration-asc">Duration low-high</option>
