--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         <option value="name-desc">Name Z-A</option>
         <option value="artist-asc">Artist A-Z</option>
         <option value="artist-desc">Artist Z-A</option>
+        <option value="other-artist-asc">Other artist(s) A-Z</option>
+        <option value="other-artist-desc">Other artist(s) Z-A</option>
         <option value="year-asc">Year old-new</option>
         <option value="year-desc">Year new-old</option>
         <option value="duration-asc">Duration low-high</option>
