quickfix add labels

--- a/artist-songs.html
+++ b/artist-songs.html
@@ -24,6 +24,7 @@
     <img id="artist-img" src="" alt="Artist image" width="240" height="240">
 
     <!-- Search -->
+    <label for="search">Search:</label>
     <input type="text" id="search" placeholder="Search songs...">
 
     <!-- Sorting -->
