--- a/playlist-songs.html
+++ b/playlist-songs.html
@@ -32,6 +32,7 @@
     </div>
 
     <!-- Search -->
+    <label for="search">Search:</label>
     <input type="text" id="search" placeholder="Search songs...">
 
     <!-- Sorting -->
