--- a/artists.html
+++ b/artists.html
@@ -22,6 +22,7 @@
     <h1>Artists</h1>
 
     <!-- Search -->
+    <label for="search">Search:</label>
     <input type="text" id="search" placeholder="Search artists...">
 
     <!-- Sorting -->
