--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       </form>
 
       <!-- Search -->
+      <label for="search">Search:</label>
       <input type="text" id="search" placeholder="Search songs...">
 
       <!-- Sorting -->
