--- a/playlists.html
+++ b/playlists.html
@@ -28,6 +28,7 @@
     </form>
 
     <!-- Search -->
+    <label for="search">Search:</label>
     <input type="text" id="search" placeholder="Search playlists...">
 
     <!-- Sorting -->
