--- a/artist-songs.html
+++ b/artist-songs.html
@@ -16,12 +16,15 @@
         <li><a href="playlists.html">Playlists</a></li>
       </ul>
     </nav>
+    <div id="hamburger" class="hamburger" onclick="toggleMenu()">&#9776;</div>
   </header>
   
   <main>
     <h1 id="artist-name"></h1>
 
-    <img id="artist-img" src="" alt="Artist image" width="240" height="240">
+    <div>
+      <img id="artist-img" src="" alt="Artist image" width="240" height="240">
+    </div>
 
     <!-- Search -->
     <label for="search">Search:</label>
