connect all-songs and artists to API

--- a/all-songs.html
+++ b/all-songs.html
@@ -11,7 +11,7 @@
     <img src="/img/logo-muse-ic.jpg" alt="Muse-ic logo" id="logo">
     <nav>
       <ul>
-        <li><a href="index.html">All Songs</a></li>
+        <li><a href="all-songs.html">All Songs</a></li>
         <li><a href="artists.html">Artists</a></li>
         <li><a href="playlists.html">Playlists</a></li>
       </ul>
@@ -76,6 +76,6 @@
     </section>
   </main>
 
-  <script type="module" src="script.js"></script>
+  <script type="module" src="all-songs.js"></script>
 </body>
 </html>
