--- a/artists.html
+++ b/artists.html
@@ -11,7 +11,7 @@
     <img src="/img/logo-muse-ic.jpg" alt="Muse-ic logo" id="logo">
     <nav>
       <ul>
-        <li><a href="index.html">All Songs</a></li>
+        <li><a href="all-songs.html">All Songs</a></li>
         <li><a href="artists.html">Artists</a></li>
         <li><a href="playlists.html">Playlists</a></li>
       </ul>
